Mon Jan 27 16:47:31 2003  Frank Hunleth  <frank@hunleth.com>

	* orbsvcs\tests\Miop\McastHello\run_test.pl: Fixed incorrect
	  reference to $SV in error handling code.  Thanks to Craig
	  Rodrigues for pointing this out.

Mon Jan 27 09:48:12 UTC 2003  Johnny Willemsen  <jwillemsen@remedy.nl>

        * performance-tests/RTCorba/Multiple_Endpoints/Common/Common.mpc:
          Add missing dllflags

        * performance-tests/RTCorba/Multiple_Endpoints/Common/Makefile:
          Set the correct x_BUILD_DLL defines. These are needed for the
          Cygwin/MingW and Kylix compiler.

Sun Jan 26 17:29:34 2003  Balachandran Natarajan  <bala@isis-server.isis.vanderbilt.edu>

	* tao/Leader_Follower.cpp (wait_for_event): Set LFS_TIMEOUT on the
	  LF_Event only if the follower timesout. The follower could
	  return with a -1 from wait () even if errors other than timeout
	  occurs, like connection closure and such.

	* tao/LF_CH_Event.cpp: Added a comment

Sun Jan 26 17:23:22 2003  Balachandran Natarajan  <bala@isis-server.isis.vanderbilt.edu>

 	* tao/Notify_Handler.cpp (TAO_Notify_Handler):
	* tao/Notify_Handler.h:

	  - Added a new constructor and a create_handler () method which
	    takes in a transport and the ACE_HANDLE that this handler would
	    be used for.

	  - Deprecating the old create_handler () and the constructor.
	    They have been left there for backward compatibility.

	  The above changes were made to get around a problem that Yakov
	  Becker and Johnny Willemsen observed in one of their
	  applications. We havent been able to reproduce the problem here
	  at all. The gist of the problem is

	   - A server thread after buffering lots of incoming messages
	     starts processing one of the messages. Keeping the handle
	     suspended it wakes up another thread in the Reactor.

	   - The first thread after processing the request tries to write
	     a reply only to find the socket closed. It starts the